# Monocular-Distance-Estimation---YoloV8

./: CMakeLists.txt  README.md  distance_log.csv  focal.txt  inference.cpp  inference.h  main.cpp
